# champ

champ_bringup/launch/: bringup.launch
champ_description/rviz/: urdf_viewer.rviz
champ_gazebo/launch/: gazebo.launch  spawn_robot.launch
stoch_linear/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  CMakeLists.txt.save.3  package.xml
stoch_linear/include/stoch_linear/controller/trot/: policy_22F.h  policy_joystick.h  policy_slopes_joystick.h  policy_slopes_joystick3.h  policy_step_in_place.h  trot_gait_controller.cpp  trot_gait_controller.h
stoch_linear/include/stoch_linear/ik/: kinematics.h  serial3r_kinematics.h
stoch_linear/include/stoch_linear/io/b3m/: b3m.h  b3m_uart.h
stoch_linear/include/stoch_linear/io/joystick/: joystick.h
stoch_linear/include/stoch_linear/test/: imu.h
stoch_linear/include/stoch_linear/tools/: slope_estimator.h
stoch_linear/include/stoch_linear/utils/: matrix_op.h  rotation.h  vector_op.h
stoch_linear/msg/: ActionStep.msg
stoch_linear/src/: trajectory_node.cpp
stoch_linear/src/controller/: trajectory_core.cpp  trajectory_node.cpp
stoch_linear/src/trajectories/elliptical/: trot_gait_controller.cpp
stoch_linear/src/utils/: vector_op.cpp
stochlite_champ/: Readme.md
stochlite_champ/stoch_linear/: CMakeLists.txt
stochlite_champ/stoch_linear/include/stoch_linear/: gazebo_slope_estimator.h
stochlite_champ/stoch_linear/include/stoch_linear/controller/linear_policy/: gazebo_slope_estimator.h  linear_policy_controller_core.h  linear_policy_controller_ros.h
stochlite_champ/stoch_linear/include/stoch_linear/controller/trot/: policy.h  policy_42_26F3.h  policy_slopes_flatg.h  policy_slopes_joystick2.h  trot_gait_controller.h
stochlite_champ/stoch_linear/include/stoch_linear/ik/: robot_kinematics.h
stochlite_champ/stoch_linear/include/stoch_linear/io/tof/: tof_coordinates.h
stochlite_champ/stoch_linear/include/stoch_linear/utils/: matrix_op.h  rotation.h  slope_estimator.h
stochlite_champ/stoch_linear/src/controller/: gazebo_slope_estimator.cpp  stochlite_gazebo_slope_esti_node.cpp  trajectory_core.cpp  trajectory_node.cpp
stochlite_champ/stoch_linear/src/controller/linear_policy/: gazebo_slope_estimator.cpp  linear_policy_controller_core.cpp  linear_policy_controller_node.cpp  linear_policy_controller_ros.cpp
stochlite_champ/stoch_linear/src/robot/: kinematics.cpp  robot_kinematics.cpp
stochlite_champ/stoch_linear/src/trajectories/elliptical/: trot_gait_controller.cpp
stochlite_champ/stoch_linear/src/utils/: matrix_op.cpp  rotation.cpp  slope_estimator.cpp
stochlite_champ/stochlite_base/: CMakeLists.txt  package.xml
stochlite_champ/stochlite_base/include/: actuator.h  quadruped_controller.h
stochlite_champ/stochlite_base/src/: quadruped_controller.cpp
stochlite_champ/stochlite_config/: CMakeLists.txt  config.json  custom_rosconsole.conf  package.xml
stochlite_champ/stochlite_config/config/gait/: gait.yaml
stochlite_champ/stochlite_config/config/links/: links.yaml
stochlite_champ/stochlite_config/config/ros_control/: ros_control.yaml
stochlite_champ/stochlite_config/include/: gait_config.h  quadruped_description.h
stochlite_champ/stochlite_config/launch/: bringup.launch  gazebo.launch
stochlite_champ/stochlite_config/worlds/: default.world
stochlite_champ/stochlite_description/: CMakeLists.txt
stochlite_champ/stochlite_description/launch/: view_urdf.launch
stochlite_champ/stochlite_description/rviz/: stochlite_urdf.rviz
stochlite_champ/stochlite_description/urdf/: stochlite.description.xacro  stochlite.gazebo.xacro  stochlite.materials.xacro  stochlite.sensors.xacro  stochlite.transmission.xacro  stochlite.urdf  stochlite.urdf.xacro  stochlite_fixed.urdf
stochlite_champ/stochlite_gazebo/: CMakeLists.txt  package.xml
stochlite_champ/stochlite_gazebo/include/: gazebo_slope_estimator.h
stochlite_champ/stochlite_gazebo/include/stochlite_gazebo/: gazebo_slope_estimator.h
stochlite_champ/stochlite_gazebo/include/stochlite_gazebo/tools/: matrix_op.h  rotation.h  slope_estimator.h  tof_coordinates.h  vector_op.h
stochlite_champ/stochlite_gazebo/launch/: stochlite_world.launch
stochlite_champ/stochlite_gazebo/src/: gazebo_slope_estimator.cpp  stochlite_gazebo_slope_esti_node.cpp  tof.cpp
stochlite_champ/stochlite_gazebo/src/stochlite_gazebo/: gazebo_slope_estimator.cpp
stochlite_champ/stochlite_gazebo/src/stochlite_gazebo/tools/: matrix_op.cpp  rotation.cpp  slope_estimator.cpp  vector_op.cpp
stochlite_champ/stochlite_msgs/: CMakeLists.txt  package.xml
stochlite_champ/stochlite_msgs/msg/: stoch_slope_esti.msg
