<?xml version="1.0"?>
<package format="2">
  <name>stochlite_msgs</name>
  <version>0.1.0</version>
  <description>stochlite_msgs package</description>

  <maintainer email="aditya.s@todo.todo">Aditya Shirwatkar</maintainer>
  <!-- <author>Juan Miguel Jimeno</author> -->

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <depend>std_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->

</package>
